// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field (unit tests) when has a label should match the snapshot 1`] = `
<kv-text-field fit-content="" input-mask-regex="" label="Text Field" placeholder="" state="none" type="text" value="">
  <template shadowrootmode="open">
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label label="Text Field"></kv-form-label>
        <div class="input-container input-container--size-large" part="input-container">
          <div class="left-slot-container">
            <slot name="left-slot"></slot>
          </div>
          <div class="resize-container">
            <span class="resize-text"></span>
            <slot name="input">
              <input class="resize-input" placeholder="" type="text" value="">
            </slot>
          </div>
          <div class="right-slot-container">
            <slot name="right-slot"></slot>
          </div>
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </template>
</kv-text-field>
`;

exports[`Text Field (unit tests) when is disabled should match the snapshot 1`] = `
<kv-text-field fit-content="" input-disabled="" input-mask-regex="" placeholder="" state="none" type="text" value="">
  <template shadowrootmode="open">
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label></kv-form-label>
        <div class="disabled input-container input-container--size-large" part="input-container">
          <div class="disabled left-slot-container">
            <slot name="left-slot"></slot>
          </div>
          <div class="resize-container">
            <span class="resize-text"></span>
            <slot name="input">
              <input class="resize-input" disabled="" placeholder="" type="text" value="">
            </slot>
          </div>
          <div class="disabled right-slot-container">
            <slot name="right-slot"></slot>
          </div>
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </template>
</kv-text-field>
`;

exports[`Text Field (unit tests) when uses default props should match the snapshot 1`] = `
<kv-text-field fit-content="" input-mask-regex="" placeholder="" state="none" type="text" value="">
  <template shadowrootmode="open">
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label></kv-form-label>
        <div class="input-container input-container--size-large" part="input-container">
          <div class="left-slot-container">
            <slot name="left-slot"></slot>
          </div>
          <div class="resize-container">
            <span class="resize-text"></span>
            <slot name="input">
              <input class="resize-input" placeholder="" type="text" value="">
            </slot>
          </div>
          <div class="right-slot-container">
            <slot name="right-slot"></slot>
          </div>
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </template>
</kv-text-field>
`;
